/*
Copyright 2019 The Alcor Authors.

Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
*/

syntax = "proto3";

package alcorcontroller;

option java_package = "com.futurewei.alcor.controller.schema";
option java_outer_classname = "Common";

enum ResourceType {
    VPC = 0;
    SUBNET = 1;
    PORT = 2;
    SECURITYGROUP = 3;
}

enum OperationType {
    CREATE = 0;
    UPDATE = 1;
    GET = 2;
    DELETE = 3;
    INFO = 4;
    FINALIZE = 5;
    CREATE_UPDATE_SWITCH = 6;
    CREATE_UPDATE_ROUTER = 7;
    CREATE_UPDATE_GATEWAY = 8;
}

enum OperationStatus {
    SUCCESS = 0;
    FAILURE = 1;
    INVALID_ARG = 2;
}

enum EtherType {
    IPV4 = 0;
    IPV6 = 1;
}

enum Protocol {
    TCP = 0;
    UDP = 1;
    ICMP = 2;
    HTTP = 3;
    ARP = 4;
}
